Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 1.4.0:
	* Fix system log start times for some protocols
	* SILC compiles with newer SILC toolkit versions (Pekka Riikonen)
	* Fixed a bug where buddy icon cache files were left in the icon
	  cache directory after they were no longer in use.

version 1.3.1 (6/9/2005):
	* The file transfer details section now also displays the full path to
	  the local file sent/received.
	* Yahoo! has the following new "/" commands:  /join, /buzz
	* Fix Yahoo! privacy bug
	* Fix Jabber Get Info crash on busted servers
	* Updated our gaim.desktop file, thanks to all our terrific translators
	  for sending in translations of the changes
	* Improvements to how Gaim handles new message notification
	* Fix Jabber registration on XMPP servers (including jabber.org)

version 1.3.0 (5/10/2005):
	* Removed parts of the font selection dialog that were not respected
	* Fix being invited to a multi user chat on MSN
	* Multiple SILC accounts should work now (Pekka Riikonen)
	* Fix times on jabber chat backlogs
	* Fix gevolution plugin to compile with e-d-s 1.0 or 1.2
	* Fix gevolution plugin to remember buddy name when someone added you
	  and you then add them
	* Formatting in jabber chats works
	* Fix to prevent MSN disconnecting if you change status while connecting
	* Fixes for two remotely exploitable crash bugs.  See
	  http://gaim.sourceforge.net/security/ for more information.
	* Change to correctly handle adding jabber buddies on ejabberd servers

version 1.2.1 (4/3/2005):
	* URL escaping now works with UTF-8 text. This may break some old log
	 files.
	* Revert to XOR auth for ICQ as the md5 is not fully functional
	* Fix bug with going away while in a jabber chat
	* MSN bug fixes (Felipe Contreras)
	* Escape things properly in IRC
	* Docklet fixes: fix the "1 pixel-wide icon" bug, fix problems with Gaim
	  crashing when the tray manager dies, and work correctly with multi-headed