@@ -3,6 +3,10 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 version 1.4.0:
 	* Added: gaim_buddy_icon_uncache()
 	  Deletes a cached buddy icon for a specified buddy
+	* Added: gaim_buddy_icon_get_type
+	  Attempts to determine the type of a given buddy icon.
+	* Added: buddy-icon-cached signal
+	  Emitted when a new buddy icon is cached.
 
 version 1.3.1 (6/9/2005):
 	* No changes
