@@ -257,6 +257,9 @@ gaim_buddy_icon_cache(GaimBuddyIcon *icon, GaimBuddy *buddy)
 		fclose(file);
 	}
 
+	gaim_signal_emit(gaim_buddy_icons_get_handle(), "buddy-icon-cached",
+					 icon, buddy, filename, old_icon);
+
 	g_free(filename);
 
 	if (old_icon != NULL)
@@ -358,6 +361,32 @@ gaim_buddy_icon_get_data(const GaimBuddyIcon *icon, size_t *len)
 		*len = icon->len;
 
 	return icon->data;
+}
+
+const char *
+gaim_buddy_icon_get_type(const GaimBuddyIcon *icon)
+{
+	const void *data;
+	size_t len;
+
+	g_return_val_if_fail(icon != NULL, NULL);
+
+	data = gaim_buddy_icon_get_data(icon, &len);
+
+	/* TODO: Find a way to do this with GDK */
+	if (len >= 4)
+	{
+		if (!strncmp(data, "BM", 2))
+			return "bmp";
+		else if (!strncmp(data, "GIF8", 4))
+			return "gif";
+		else if (!strncmp(data, "\xff\xd8\xff\xe0", 4))
+			return "jpg";
+		else if (!strncmp(data, "\x89PNG", 4))
+			return "png";
+	}
+
+	return NULL;
 }
 
 void
@@ -476,6 +505,15 @@ gaim_buddy_icons_init()
 		NULL, (GFreeFunc)g_hash_table_destroy);
 
 	cache_dir = g_build_filename(gaim_user_dir(), "icons", NULL);
+
+	gaim_signal_register(gaim_buddy_icons_get_handle(), "buddy-icon-cached",
+						 gaim_marshal_VOID__POINTER_POINTER_POINTER_POINTER, NULL, 4,
+						 gaim_value_new(GAIM_TYPE_SUBTYPE,
+										GAIM_SUBTYPE_BUDDY_ICON),
+						 gaim_value_new(GAIM_TYPE_SUBTYPE,
+						 				GAIM_SUBTYPE_BLIST_BUDDY),
+						 gaim_value_new(GAIM_TYPE_STRING),
+						 gaim_value_new(GAIM_TYPE_STRING));
 }
 
 void
