@@ -68,7 +68,8 @@ typedef enum
 	GAIM_SUBTYPE_CONVERSATION,
 	GAIM_SUBTYPE_CONV_WINDOW,
 	GAIM_SUBTYPE_PLUGIN,
-	GAIM_SUBTYPE_BLIST_NODE
+	GAIM_SUBTYPE_BLIST_NODE,
+	GAIM_SUBTYPE_BUDDY_ICON
 
 } GaimSubType;
 
